--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,13 +1,22 @@
-@import './_variables.scss';
+@import './_typography';
+@import './_variables';
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
+	font-family: $apercu-light;
+	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	margin: 0;
 	padding: 0;
+}
+
+h1 {
+	font-size: 7rem;
+	font-family: $apercu-bold;
+}
+
+h2 {
+	font-size: 3.5rem;
+	font-family: $apercu-bold;
 }
 
 #fp-container {
