--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -34,7 +34,17 @@
        url('../fonts/Apercu/Apercu-Light.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
+@font-face {
+  font-family: 'Apercu-Light-Italic';
+  src: url('../fonts/Apercu/Apercu-LightItalic.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Apercu/Apercu-LightItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Apercu/Apercu-LightItalic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Apercu/Apercu-LightItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Apercu/Apercu-LightItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
 $apercu-bold: 'Apercu-Bold', sans-serif;
 $apercu-medium: 'Apercu-Medium', sans-serif;
 $apercu: 'Apercu-Regular', sans-serif;
 $apercu-light: 'Apercu-Light', sans-serif;
+$apercu-light-italic: 'Apercu-Light-Italic', sans-serif;
