--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,8 +1,19 @@
+/*
+ * Module Imports
+ **/
 @import './_typography';
 @import './_variables';
+@import './components/intro-section';
 
+
+/*
+ * Global Styles
+ **/
 body {
+	background-color: #f0eee2;
+	color: #272727;
 	font-family: $apercu-light;
+	font-size: 16px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	margin: 0;
@@ -39,6 +50,7 @@ h2 {
 
 		&.animate {
 			opacity: 1;
+			z-index: 10;
 		}
 	}
 }
