--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,33 +1,57 @@
 /*
  * Module Imports
  **/
+@import './_reset';
 @import './_typography';
 @import './_variables';
 @import './components/intro-section';
+@import './components/about-section';
+@import './components/skills-section';
 
 
 /*
  * Global Styles
  **/
 body {
-	background-color: #f0eee2;
-	color: #272727;
+	background-color: $off-white;
+	color: $off-black;
 	font-family: $apercu-light;
-	font-size: 16px;
+	font-size: 18px;
+	line-height: 1.3;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	margin: 0;
 	padding: 0;
 }
 
+h1, h2, h3 {
+	font-family: $apercu-bold;
+	margin: 15px auto;
+}
+
 h1 {
 	font-size: 7rem;
-	font-family: $apercu-bold;
+	padding: 0 5vw;
 }
 
 h2 {
 	font-size: 3.5rem;
-	font-family: $apercu-bold;
+	margin-bottom: 3vh;
+	padding: 0 2vw;
+}
+
+h3 {
+	font-size: 2.25rem;
+	margin-bottom: 20px;
+	padding: 0 2vw;
+}
+
+p {
+	margin-bottom: 15px;
+}
+
+strong {
+	font-family: $apercu-medium;
 }
 
 #fp-container {
