--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -7,6 +7,7 @@
 @import './components/intro-section';
 @import './components/about-section';
 @import './components/skills-section';
+@import './components/project-section';
 
 
 /*
