--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import './components/about-section';
 @import './components/skills-section';
 @import './components/project-section';
+@import './components/contact-section';
 
 
 /*
