--- a/src/assets/styles/components/_intro-section.scss
+++ b/src/assets/styles/components/_intro-section.scss
@@ -1,7 +1,7 @@
 #intro {
     
     h1.highlight {
-        color: #f0eee2;
+        color: $off-white;
 
         &::before {
             background-color: #272727;
