skills section — update content

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,7 +19,7 @@ body {
 	background-color: $off-white;
 	color: $off-black;
 	font-family: $apercu-light;
-	font-size: 18px;
+	font-size: 21px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	margin: 0;
@@ -54,7 +54,7 @@ h4 {
 }
 
 p {
-	margin-bottom: 15px;
+	margin-bottom: 1.4rem;
 }
 
 strong {
