animations — add initial animations for when a user leaves a slide

--- a/src/assets/styles/_animations.scss
+++ b/src/assets/styles/_animations.scss
@@ -50,3 +50,10 @@ section.animate {
         right: 0;
     }
 }
+
+section.leave-slide {
+    
+    & > *:not(.highlight) {
+        opacity: 0;
+    }
+}
