--- a/src/assets/styles/components/_about-section.scss
+++ b/src/assets/styles/components/_about-section.scss
@@ -12,4 +12,18 @@
         max-width: 590px;
         margin-left: -333px;
     }
+
+    .appear {
+        &:nth-child(1) {
+            transition-delay: 0.6s;
+        }
+
+        &:nth-child(2) {
+            transition-delay: 0.85s;
+        }
+
+        &:nth-child(3) {
+            transition-delay: 1.05s;
+        }
+    }
 }
