--- a/src/assets/styles/components/_contact-section.scss
+++ b/src/assets/styles/components/_contact-section.scss
@@ -15,4 +15,30 @@
             padding: 0 10px;
         }
     }
+
+    &.animate {
+        .appear:nth-child(1) {
+            transition: opacity 0.5s linear 0.7s;
+        }
+
+        .appear:nth-child(2) {
+            transition: opacity 0.5s linear 0.85s;
+        }
+
+        .appear:nth-child(3) {
+            transition: opacity 0.5s linear 1s;
+        }
+
+        .appear:nth-child(4) {
+            transition: opacity 0.5s linear 1.15s;
+        }
+
+        .appear:nth-child(5) {
+            transition: opacity 0.5s linear 1.3s;
+        }
+
+        .appear:nth-child(6) {
+            transition: opacity 0.5s linear 1.45s;
+        }
+    }
 }
