--- a/src/assets/styles/components/_project-section.scss
+++ b/src/assets/styles/components/_project-section.scss
@@ -21,6 +21,8 @@
 
         h4 {
             display: inline;
+            // background-color: $sunglow;
+            background-color: $off-black;
             color: $off-white;
         }
     }
@@ -36,5 +38,31 @@
         top: 5vw;
         right: 5vw;
         z-index: -1;
+    }
+
+    &.animate {
+        .appear:nth-child(1) {
+            transition-delay: 0.8s;
+        }
+
+        .appear:nth-child(2) {
+            transition-delay: 1s;
+        }
+
+        .appear:nth-child(3) {
+            transition-delay: 1.2s;
+        }
+
+        .appear:nth-child(4) {
+            transition-delay: 1.4s;
+        }
+
+        .appear:nth-child(5) {
+            transition-delay: 1.6s;
+        }
+
+        .appear:nth-child(6) {
+            transition-delay: 1.8s;
+        }
     }
 }
