--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import './components/about-section';
 @import './components/skills-section';
 @import './components/project-section';
+@import './components/project-animations';
 @import './components/contact-section';
 
 /*
