--- a/src/assets/styles/components/_project-section.scss
+++ b/src/assets/styles/components/_project-section.scss
@@ -13,7 +13,7 @@
         }
 
         .project-desc {
-            max-width: 850px;
+            max-width: 700px;
 
             h3.highlight {
                 display: inline-block;
@@ -52,15 +52,33 @@
         }
     }
 
+    #hennessy {
+        opacity: 0;
+        transition: opacity 0.2s ease-in 0.5s;
+    }
+
     #good-reason {
         opacity: 0;
-        transition: opacity 0.25s ease-in 0.5s;
+        transform: scale(10);
+        transition: opacity 0.25s ease-in 0.5s, transform 0.75s linear 0.25s;
     }
 
     &.animate {
 
-        #good-reason {
-            opacity: 1;
+        .anim-container {
+
+            &.section-4 {
+                #hennessy {
+                    opacity: 1;
+                }
+            }
+
+            &.section-5 {
+                #good-reason {
+                    opacity: 1;
+                    transform: scale(1);
+                }
+            }
         }
 
         p.appear {
