Project Section — animations

--- a/src/assets/styles/components/_project-animations.scss
+++ b/src/assets/styles/components/_project-animations.scss
@@ -6,52 +6,84 @@
     left: 0;
     right: 0;
     bottom: 0;
+    opacity: 0;
+    transition: opacity 0.2s ease-in 0.5s;
 
     img {
         position: absolute;
         display: block;
+        transition: transform 1.75s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
 
         &:nth-child(1) { // rocko
             width: 21%;
-            top: 4vh;
+            top: 19vh;
             left: 33%;
             z-index: 1;
         }
 
         &:nth-child(2) { // fabric            
             width: 20%;
-            bottom: -35vh;
+            bottom: -50vh;
             left: 35%;
             z-index: 1;
         }
 
         &:nth-child(3) { // drinks
             width: 18%;
-            top: 8vh;
+            top: 21vh;
             right: 4%;
             z-index: 1;
         }
 
         &:nth-child(4) { // street
             width: 18%;
-            bottom: 0;
+            bottom: -17vh;
             right: 24%;
             z-index: 1;
         }
 
         &:nth-child(5) { // victor
             width: 20%;
-            bottom: 5%;
+            bottom: -7vh;
             right: 5%;
             z-index: 2;
         }
 
         &:nth-child(6) { // yin
             width: 17%;
-            top: 17vh;
+            top: 38vh;
             left: 53%;
             z-index: 1;
         }
+    }
+}
+
+#fp-container.active-3 #hennessy img,
+#fp-container.active-5 #hennessy img {
+    transition-delay: 0;
+
+    &:nth-child(1) { // rocko
+        transform: translateY(-25vh);
+    }
+
+    &:nth-child(2) { // fabric            
+        transform: translateY(-29vh);
+    }
+
+    &:nth-child(3) { // drinks
+        transform: translateY(-21vh);
+    }
+
+    &:nth-child(4) { // street
+        transform: translateY(-23vh);
+    }
+
+    &:nth-child(5) { // victor
+        transform: translateY(-23vh);
+    }
+
+    &:nth-child(6) { // yin
+        transform: translateY(-31vh);
     }
 }
 
@@ -62,6 +94,10 @@
     top: 18vh;
     right: 14vw;
     z-index: -1;
+    opacity: 0;
+    transform: scale(10);
+    transition: opacity 0.25s ease-in 0.5s, 
+                transform 0.75s linear 0.25s;
 
     #parent-circle {
         position: relative;
@@ -114,4 +150,75 @@
   to {
     -webkit-transform: rotate(359deg);
   }
+}
+
+// Animations
+.animate {
+
+    .anim-container {
+        &.section-4 {
+            #hennessy {
+                opacity: 1;
+
+                img {
+                    &:nth-child(1) { // rocko
+                        transform: translateY(-15vh);
+                    }
+
+                    &:nth-child(2) { // fabric            
+                        transform: translateY(-22vh);
+                    }
+
+                    &:nth-child(3) { // drinks
+                        transform: translateY(-13vh);
+                    }
+
+                    &:nth-child(4) { // street
+                        transform: translateY(-19vh);
+                    }
+
+                    &:nth-child(5) { // victor
+                        transform: translateY(-14vh);
+                    }
+
+                    &:nth-child(6) { // yin
+                        transform: translateY(-20vh);
+                    }
+                }
+            }
+        }
+
+        &.section-5 {
+            #good-reason {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+    }
+
+    p.appear {
+        transition-delay: 0.8s;
+    }
+
+    h4.appear {
+        transition-delay: 1s;
+    }
+
+    ul {
+        li:nth-child(1) {
+            transition-delay: 1s;
+        }
+
+        li:nth-child(2) {
+            transition-delay: 1.15s;
+        }
+
+        li:nth-child(3) {
+            transition-delay: 1.4s;
+        }
+
+        li:nth-child(4) {
+            transition-delay: 1.55s;
+        }
+    }
 }
