--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,6 +2,7 @@
  * Module Imports
  **/
 @import './_reset';
+@import './_mixins';
 @import './_typography';
 @import './_variables';
 @import './_animations';
@@ -87,9 +88,10 @@ strong {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		width: 100vw;
+		width: 90vw;
 		height: 100vh;
 		opacity: 0;
+		left: 5vw;
 
 		&.active {
 			opacity: 1;
