--- a/src/assets/styles/components/_skills-section.scss
+++ b/src/assets/styles/components/_skills-section.scss
@@ -31,10 +31,16 @@
             }
 
             ul {
-                margin-top: 1rem;
-
                 li {
-                    margin-bottom: 0.75rem;
+                    margin-bottom: 0.4rem;
+                }
+
+                @include breakpoint(tablet) {
+                    margin-top: 1rem;
+
+                    li {
+                        margin-bottom: 0.75rem;
+                    }
                 }
             }
         }
